ChangeLog

Name: Vincent Wong
Date: 10-03-2013
Description: Added standard chess piece images, added animation
    * src/StandardChessGame.java: Tweaked selection mechanics (left click to select and move,
    right click to deselect).
    * src/StandardChessGameGraphics.java: Added utility painting functions for animation.
    * src/StandardChessGameAnimation.java: New class. Runs a thread to animate chess moves.

Name: William Lai
Date: 10-03-2013
Description: Implemented pawn promotion
    * src/StandardChessGame.java: Forgot about pawn promotion. It is now implemented.

Name: William Lai
Date: 10-02-2013
Description: Fixed knight check bug
    * src/StandardChessGame.java: Fixed bug that did not account for knight when resolving checks. Made isInWay function more robust to handle null piece and knights.

Name: William Lai
Date: 09-25-2013
Description: Finished game logic, started adding test functions
     * src/Board.java: Added removePiece function for en passant.
     * src/StandardChessGame.java: Added en passant logic. Started writing function to parse algebraic notation and make moves from them.

Name: Eric Du
Date: 09-23-2013
Description: Changed function names to keep consistency with program (getThreats, getMoves)
     * src/Board.java: Added clone function

Name: William Lai
Date: 09-23-2013
Description: Been a little while. More game logic, almost all done now.
     * src/King.java: Added castling as possible moves
     * src/Player.java: Fixed a silly comment typo
     * src/StandardChessGame.java: Finished off castling conditionals and implemented a checkmate check.

Name: William Lai
Date: 04-09-2013
Description: Added and fixed more game logic
     * src/Definitions.java: Added helper function flip for changing colors