@@ -1,0 +1,15 @@
+
+public class HumanPlayer extends Player
+{
+
+	public HumanPlayer(String name)
+	{
+		setName(name);
+	}
+
+	public Move promptMove()
+	{
+		return null;
+	}
+
+}
